<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >
    <include layout="@layout/titlebar"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            style="@style/textview16sp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:text="@string/lostfind_safe_phone"
            android:textColor="@color/purple"/>
        <TextView
            android:id="@+id/tv_safephone"
            style="@style/textview16sp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="15dp"
            android:textColor="@color/purple"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1.0px"
        android:background="#10000000"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:id="@+id/tv_lostfind_protectstatus"
            style="@style/textview16sp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:text="@string/lostfind_switch_on"
            android:textColor="@color/purple"/>
        <ToggleButton
            android:id="@+id/togglebtn_lostfind"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/toggle_btn_bg_selector"
            android:textOn=""
            android:textOff=""/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1.0px"
        android:background="#10000000"/>
    <RelativeLayout
        android:id="@+id/rl_inter_setup_wizard"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            style="@style/textview16sp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:text="@string/lostfind_resetting"
            android:textColor="@color/purple"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/arrow_right"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1.0px"
        android:background="#10000000"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:background="@drawable/round_purple_tv_bg"
            android:gravity="center"
            android:text="@string/lostfind_message_instruction"
            android:textColor="@android:color/white"
            android:textSize="16sp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">
            <TextView
                style="@style/textview16sp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:text="@string/lostfind_play_alarm_music_inst"
                android:textColor="@color/purple"/>
            <TextView
                style="@style/textview16sp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:drawableLeft="@drawable/sim_alarm_icon_small"
                android:drawablePadding="5dp"
                android:text="@string/lostfind_play_alarm_music"
                android:textColor="@color/purple"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">
            <TextView
                style="@style/textview16sp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:text="@string/lostfind_gps_track_inst"
                android:textColor="@color/purple"/>
            <TextView
                style="@style/textview16sp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:drawableLeft="@drawable/locate_icon_small"
                android:drawablePadding="5dp"
                android:text="@string/lostfind_gps_track"
                android:textColor="@color/purple"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">
            <TextView
                style="@style/textview16sp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:text="@string/lostfind_remote_lock_screen_inst"
                android:textColor="@color/purple"/>
            <TextView
                style="@style/textview16sp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:drawableLeft="@drawable/lock_screen_icon_small"
                android:drawablePadding="5dp"
                android:text="@string/lostfind_remote_lock_screen"
                android:textColor="@color/purple"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">
            <TextView
                style="@style/textview16sp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:text="@string/lostfind_remote_delete_data_inst"
                android:textColor="@color/purple"/>
            <TextView
                style="@style/textview16sp"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dp"
                android:drawableLeft="@drawable/delete_data_small"
                android:drawablePadding="5dp"
                android:text="@string/lostfind_remote_delete_data"
                android:textColor="@color/purple"/>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>