<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="100"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:background="@color/purple">
            <ImageView
                android:id="@+id/imgv"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerInParent="true"
                android:background="@drawable/security_phone_setup1"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/imgv"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/setup_safe_guide"
                android:textColor="@android:color/white"
                android:textSize="18sp"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:orientation="horizontal">
                <TextView
                    style="@style/textview16sp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:drawablePadding="5dp"
                    android:drawableTop="@drawable/sim_alarm_icon"
                    android:gravity="center"
                    android:text="@string/setup_sim_change_alarm"
                    android:textColor="@color/purple"/>
                <TextView
                    style="@style/textview16sp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:drawablePadding="5dp"
                    android:drawableTop="@drawable/locate_icon"
                    android:gravity="center"
                    android:text="@string/setup_gps_track"
                    android:textColor="@color/purple"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal">
                <TextView
                    style="@style/textview16sp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:drawablePadding="5dp"
                    android:drawableTop="@drawable/lock_screen_icon"
                    android:gravity="center"
                    android:text="@string/setup_remote_lock_screen"
                    android:textColor="@color/purple"/>
                <TextView
                    style="@style/textview16sp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:drawablePadding="5dp"
                    android:drawableTop="@drawable/delete_data"
                    android:gravity="center"
                    android:text="@string/setup_remote_delete_data"
                    android:textColor="@color/purple"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_weight="10"
        android:background="@color/purple"
        android:gravity="center">
        <include layout="@layout/setup_radiogroup"/>
    </LinearLayout>
</LinearLayout>